[gd_scene load_steps=27 format=2]

[ext_resource path="res://UI/EnemyDetailsPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/NotificationPopup.gd" type="Script" id=2]
[ext_resource path="res://UI/DetailsPanel.gd" type="Script" id=3]
[ext_resource path="res://UI/EnemyFileMenu.gd" type="Script" id=4]
[ext_resource path="res://UI/UI Buttons/Minimize.gd" type="Script" id=5]
[ext_resource path="res://UI/EnemyTree.gd" type="Script" id=6]
[ext_resource path="res://UI/GatheringItemDetailsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Chat.tscn" type="PackedScene" id=9]
[ext_resource path="res://DayNightOptionButton.gd" type="Script" id=10]
[ext_resource path="res://UI/Players.gd" type="Script" id=11]
[ext_resource path="res://UI/ItemTree.gd" type="Script" id=12]
[ext_resource path="res://UI/ItemFileMenu.gd" type="Script" id=13]
[ext_resource path="res://resources/icons/brightmixIconset search.png" type="Texture" id=14]
[ext_resource path="res://resources/icons/icon_sun.png" type="Texture" id=15]
[ext_resource path="res://resources/icons/icon_moon.png" type="Texture" id=16]
[ext_resource path="res://resources/icons/icon_clock.png" type="Texture" id=17]
[ext_resource path="res://resources/icons/icon_gear.png" type="Texture" id=18]
[ext_resource path="res://StageItemList.gd" type="Script" id=19]
[ext_resource path="res://UI/ShopFileMenu.gd" type="Script" id=20]
[ext_resource path="res://UI/ShopItemDetailsPanel.tscn" type="PackedScene" id=21]
[ext_resource path="res://UI/DayNightTimeMigrationConfirmationDialog.gd" type="Script" id=22]
[ext_resource path="res://RpcClient/RpcRequest.gd" type="Script" id=23]

[sub_resource type="GDScript" id=2]
script/source = "extends CanvasLayer

signal layer_selected(layer)
signal subgroup_changed(subgroup_id)

signal tab_changed(tab)

signal stage_selected(stage_no)

signal player_activated(player_marker)
signal player_joined(player)
signal player_updated(player)
signal player_left(player)

signal settings_updated()

var current_stage_no

onready var stage_label: Label = $status_view/container/StageLabel
onready var coordinates_label: Label = $status_view/container/CoordinatesLabel
onready var hovered_placemark = null

onready var current_tab = $left/tab.current_tab
onready var current_subgroup_id = $status_view/container/SubGroupIdSpinBox.value

func _input(event):
	if event is InputEventMouseMotion:
		var mouse_pos : Vector2 = $\"../MapCoordinateSpace\".get_local_mouse_position();
		coordinates_label.text = String((mouse_pos / MapControl.MAP_SCALE).round())
	if event is InputEventKey:
		if Input.is_action_pressed(\"set_hide\"):
			if hovered_placemark != null and hovered_placemark is HideableControl:
				var hideable_hovered_placemark := hovered_placemark as HideableControl
				hideable_hovered_placemark.hide_control()
		if Input.is_action_just_pressed(\"set_unhide\"):
			SelectedListManager.reveal_hidden()
		

func _on_LayerOptionButton_item_selected(index):
	emit_signal(\"layer_selected\", index)
	
func _on_SubGroupIdSpinBox_value_changed(value):
	current_subgroup_id = int(value)
	emit_signal(\"subgroup_changed\", current_subgroup_id)

func _on_StageItemList_item_selected(index: int) -> void:
	var stage_no = $left/tab/Stages/StageItemList.get_item_metadata(index)
	emit_signal(\"stage_selected\", stage_no)
	
	var stage_id = DataProvider.stage_no_to_stage_id(int(stage_no))
	if stage_id == -1:
		stage_label.text = \"Stage No. \" + stage_no
	else:
		stage_label.text = \"%s (ID: %s, Stage No. %s)\" % [tr(str(\"STAGE_NAME_\",stage_id)), stage_id, stage_no]
		
	current_stage_no = stage_no

func _on_Players_item_activated():
	var selected = $left/tab/Players.get_selected().get_metadata(0)
	if selected is PlayerMapEntity:
		emit_signal(\"player_activated\", selected as PlayerMapEntity)

func _on_tab_changed(tab):
	current_tab = tab
	emit_signal(\"tab_changed\", tab)
	
func _on_Players_player_joined(player):
	emit_signal(\"player_joined\", player)

func _on_Players_player_left(player):
	emit_signal(\"player_left\", player)

func _on_Players_player_updated(player):
	emit_signal(\"player_updated\", player)
	
func _on_SettingsWindowDialog_settings_updated():
	emit_signal(\"settings_updated\")

func _on_root_markers_loaded():
	$left/tab/Enemies/FileMenu._on_markers_loaded()

func _on_enemy_subgroup_placemark_mouse_entered(position_index: int, enemy_position_placemark: EnemyPositionPlacemark, subgroup_id: int, enemy_group_placemark: ToggleableEnemySubgroupPlacemark) -> void:
	$status_view/container/SetLabel.text = \"Enemy set (%d, %d, %d) Subgroup %d - %d/%d\" % [enemy_group_placemark.enemy_set.stage_id, enemy_group_placemark.enemy_set.layer_no, enemy_group_placemark.enemy_set.group_id, subgroup_id, enemy_group_placemark.enemy_subgroup.effective_enemy_count(), enemy_group_placemark.enemy_subgroup.positions.size()]
	if position_index == -1:
		_set_hovered_placemark(enemy_group_placemark)
	else:
		$status_view/container/SetLabel.text = \"Position #%d of %s\" % [position_index, $status_view/container/SetLabel.text]
		_set_hovered_placemark(enemy_position_placemark)
	
func _on_enemy_subgroup_placemark_mouse_exited(_position_index: int, _enemy_position_placemark: EnemyPositionPlacemark, _subgroup_id: int, _enemy_group_placemark: ToggleableEnemySubgroupPlacemark) -> void:
	$status_view/container/SetLabel.text = \"\"
	hovered_placemark = null
	
func _on_gathering_subgroup_placemark_mouse_entered(gathering_placemark: ToggleableGatheringSpotPlacemark) -> void:
	$status_view/container/SetLabel.text = gathering_placemark.gathering_spot.to_string()
	_set_hovered_placemark(gathering_placemark)
	
func _on_gathering_subgroup_placemark_mouse_exited(_gathering_placemark: ToggleableGatheringSpotPlacemark) -> void:
	$status_view/container/SetLabel.text = \"\"
	hovered_placemark = null
	
func _on_shop_placemark_mouse_entered(shop_placemark: ToggleableShopPlacemark) -> void:
	$status_view/container/SetLabel.text = \"%s (Shop ID: %d)\" % [shop_placemark.get_display_name(), shop_placemark.shop.id]
	_set_hovered_placemark(shop_placemark)
	
func _on_shop_placemark_mouse_exited(_shop: ToggleableShopPlacemark) -> void:
	$status_view/container/SetLabel.text = \"\"
	hovered_placemark = null
	
func _set_hovered_placemark(set_placemark):
	hovered_placemark = set_placemark
"

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _on_SettingsButton_pressed():
	$\"../../../SettingsWindowDialog\".popup_centered()
"

[sub_resource type="GDScript" id=1]
script/source = "extends PanelContainer

func _ready():
	assert(SelectedListManager.connect(\"selection_changed\", self, \"_on_selection_changed\") == OK)
	visible = false

func _on_selection_changed(_added: Array, _removed: Array):
	if SelectedListManager.selected_list.size() == 0:
		visible = false

func _on_Close_pressed():
	SelectedListManager.clear_list()
	visible = false

func _on_DetailsPanel_showing_details_of(obj):
	visible = obj != null
"

[node name="root" type="CanvasLayer"]
script = SubResource( 2 )

[node name="left" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 45.0
margin_right = 320.0
margin_bottom = -4.0

[node name="tab" type="TabContainer" parent="left"]
margin_left = 7.0
margin_top = 7.0
margin_right = 303.0
margin_bottom = 544.0
tab_align = 0

[node name="Stages" type="Control" parent="left/tab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="left/tab/Stages"]
margin_right = 288.0
margin_bottom = 28.0

[node name="StagesLineEdit" type="LineEdit" parent="left/tab/Stages/HBoxContainer"]
margin_right = 288.0
margin_bottom = 28.0
size_flags_horizontal = 3
right_icon = ExtResource( 14 )
placeholder_text = "Search..."

[node name="StageItemList" type="ItemList" parent="left/tab/Stages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -4.0
size_flags_vertical = 3
script = ExtResource( 19 )

[node name="Enemies" type="VBoxContainer" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="left/tab/Enemies"]
margin_right = 288.0
margin_bottom = 28.0

[node name="EnemyFileMenu" type="MenuButton" parent="left/tab/Enemies/HBoxContainer"]
process_priority = 1
margin_right = 32.0
margin_bottom = 28.0
focus_mode = 2
size_flags_horizontal = 0
text = "File"
flat = false
align = 0
items = [ "New Enemy Sets", null, 0, false, false, 0, 0, null, "", false, "Load Enemy Sets", null, 0, false, false, 1, 0, null, "", false, "Save Enemy Sets", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 4 )
file_dialog = NodePath("../../../../../EnemyFileDialog")
notification_popup = NodePath("../../../../../NotificationPopup")

[node name="FilterLineEdit" type="LineEdit" parent="left/tab/Enemies/HBoxContainer"]
margin_left = 36.0
margin_right = 288.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_icon = ExtResource( 14 )

[node name="EnemyTree" type="Tree" parent="left/tab/Enemies"]
margin_top = 32.0
margin_right = 288.0
margin_bottom = 497.0
mouse_filter = 1
size_flags_vertical = 3
allow_reselect = true
select_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="left/tab/Items"]
margin_right = 288.0
margin_bottom = 28.0

[node name="ItemFileMenu" type="MenuButton" parent="left/tab/Items/HBoxContainer"]
process_priority = 1
margin_right = 68.0
margin_bottom = 28.0
focus_mode = 2
size_flags_horizontal = 0
text = "Gathering"
flat = false
align = 0
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 13 )
file_dialog = NodePath("../../../../../ItemFileDialog")
notification_popup = NodePath("../../../../../NotificationPopup")

[node name="ShopFileMenu" type="MenuButton" parent="left/tab/Items/HBoxContainer"]
margin_left = 72.0
margin_right = 112.0
margin_bottom = 28.0
text = "Shop"
flat = false
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 20 )
file_dialog = NodePath("../../../../../ShopFileDialog")
notification_popup = NodePath("../../../../../NotificationPopup")

[node name="FilterLineEdit" type="LineEdit" parent="left/tab/Items/HBoxContainer"]
margin_left = 116.0
margin_right = 288.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_icon = ExtResource( 14 )

[node name="ItemTree" type="Tree" parent="left/tab/Items"]
margin_top = 32.0
margin_right = 288.0
margin_bottom = 497.0
mouse_filter = 1
size_flags_vertical = 3
allow_reselect = true
hide_root = true
select_mode = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Tree" parent="left/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
allow_rmb_select = true
hide_root = true
script = ExtResource( 11 )

[node name="RpcRequest" type="HTTPRequest" parent="left/tab/Players"]
script = ExtResource( 23 )

[node name="KickConfirmationDialog" type="ConfirmationDialog" parent="left/tab/Players"]
margin_right = 360.0
margin_bottom = 126.0
rect_min_size = Vector2( 360, 126 )
window_title = "Kick player?"

[node name="Chat" parent="left/tab" instance=ExtResource( 9 )]
visible = false

[node name="status_view" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 44.0
mouse_filter = 1

[node name="container" type="HBoxContainer" parent="status_view"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( -163, -80 )

[node name="minimize" type="Button" parent="status_view/container"]
margin_right = 16.0
margin_bottom = 28.0
text = "-"
script = ExtResource( 5 )
control_to_minimize = NodePath("../../../left")
property_to_toggle = "visible"

[node name="LayerOptionButton" type="OptionButton" parent="status_view/container"]
margin_left = 20.0
margin_right = 91.0
margin_bottom = 28.0
text = "Layer 0"
items = [ "Layer 0", null, false, 0, null, "Layer 1", null, false, 1, null, "Layer 2", null, false, 2, null, "Layer 3", null, false, 3, null, "Layer 4", null, false, 4, null, "Layer 5", null, false, 5, null, "Layer 6", null, false, 6, null, "Layer 7", null, false, 7, null, "Layer 8", null, false, 8, null, "Layer 9", null, false, 9, null ]
selected = 0

[node name="DayNightOptionButton" type="OptionButton" parent="status_view/container"]
margin_left = 95.0
margin_right = 208.0
margin_bottom = 28.0
text = "Day & Night"
icon = ExtResource( 17 )
items = [ "Day & Night", ExtResource( 17 ), false, 0, null, "Day", ExtResource( 15 ), false, 1, null, "Night", ExtResource( 16 ), false, 2, null, "Custom", ExtResource( 18 ), false, 3, null ]
selected = 0
script = ExtResource( 10 )

[node name="StageLabel" type="Label" parent="status_view/container"]
margin_left = 212.0
margin_top = 5.0
margin_right = 378.0
margin_bottom = 23.0
text = "Stage Name (ID and Number)"

[node name="Spacer" type="Control" parent="status_view/container"]
margin_left = 382.0
margin_right = 659.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="SetLabel" type="Label" parent="status_view/container"]
margin_left = 663.0
margin_top = 5.0
margin_right = 730.0
margin_bottom = 23.0
text = "Set (X,X,X,X)"

[node name="SubGroupIdSpinBox" type="SpinBox" parent="status_view/container"]
margin_left = 734.0
margin_right = 854.0
margin_bottom = 28.0
rect_min_size = Vector2( 120, 0 )
rounded = true
prefix = "SubGroup Id"

[node name="CoordinatesLabel" type="Label" parent="status_view/container"]
margin_left = 858.0
margin_top = 5.0
margin_right = 927.0
margin_bottom = 23.0
text = "Coordinates"

[node name="SettingsButton" type="Button" parent="status_view/container"]
margin_left = 931.0
margin_right = 990.0
margin_bottom = 28.0
text = "Settings"
script = SubResource( 3 )

[node name="Right Panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -430.0
margin_top = 45.0
margin_right = -10.0
margin_bottom = -4.0
script = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Right Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 413.0
margin_bottom = 544.0

[node name="HBoxContainer" type="HBoxContainer" parent="Right Panel/VBoxContainer"]
margin_right = 406.0
margin_bottom = 24.0

[node name="TitleLabel" type="Label" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 95.0
margin_bottom = 21.0
text = "Placeholder Title"

[node name="Control" type="Control" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 363.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Minimize" type="Button" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 383.0
margin_bottom = 24.0
text = "-"
script = ExtResource( 5 )
control_to_minimize = NodePath("../../..")

[node name="Close" type="Button" parent="Right Panel/VBoxContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 406.0
margin_bottom = 24.0
text = "X"

[node name="DetailsPanel" type="Panel" parent="Right Panel/VBoxContainer" groups=["DetailsPanel"]]
margin_top = 28.0
margin_right = 406.0
margin_bottom = 537.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="EnemyDetailsPanel" parent="Right Panel/VBoxContainer/DetailsPanel" instance=ExtResource( 1 )]
title_label = NodePath("../../HBoxContainer/TitleLabel")

[node name="GatheringItemDetailsPanel" parent="Right Panel/VBoxContainer/DetailsPanel" instance=ExtResource( 7 )]
title_label = NodePath("../../HBoxContainer/TitleLabel")

[node name="ShopItemDetailsPanel" parent="Right Panel/VBoxContainer/DetailsPanel" instance=ExtResource( 21 )]
title_label = NodePath("../../HBoxContainer/TitleLabel")

[node name="NotificationPopup" type="PopupPanel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -22.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="NotificationPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 240.0
margin_bottom = 22.0
text = "Notification"

[node name="SettingsWindowDialog" parent="." instance=ExtResource( 8 )]

[node name="DayNightTimeMigrationConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = -45.0
margin_right = 269.0
margin_bottom = 46.0
popup_exclusive = true
window_title = "Por favor, Confirma..."
dialog_text = "It seems that the file loaded has day/night enemies starting/ending at 7:00. 
Would you like to convert them all to the new day/night range starting/ending at 6:00?"
dialog_autowrap = true
script = ExtResource( 22 )

[node name="EnemyFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -195.0
margin_right = 312.0
margin_bottom = 195.0
rect_min_size = Vector2( 180, 63 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.json; JSON Files", "*.csv ; CSV Files" )
show_hidden_files = true

[node name="ItemFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -195.0
margin_right = 312.0
margin_bottom = 195.0
rect_min_size = Vector2( 180, 63 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; CSV Files" )
show_hidden_files = true

[node name="ShopFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -195.0
margin_right = 312.0
margin_bottom = 195.0
rect_min_size = Vector2( 180, 63 )
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON Files" )
show_hidden_files = true

[connection signal="tab_changed" from="left/tab" to="." method="_on_tab_changed"]
[connection signal="text_changed" from="left/tab/Stages/HBoxContainer/StagesLineEdit" to="left/tab/Stages/StageItemList" method="_on_StagesLineEdit_text_changed"]
[connection signal="item_selected" from="left/tab/Stages/StageItemList" to="." method="_on_StageItemList_item_selected"]
[connection signal="file_loaded" from="left/tab/Enemies/HBoxContainer/EnemyFileMenu" to="DayNightTimeMigrationConfirmationDialog" method="_on_EnemyFileMenu_file_loaded"]
[connection signal="text_changed" from="left/tab/Enemies/HBoxContainer/FilterLineEdit" to="left/tab/Enemies/EnemyTree" method="_on_FilterLineEdit_text_changed"]
[connection signal="text_changed" from="left/tab/Items/HBoxContainer/FilterLineEdit" to="left/tab/Items/ItemTree" method="_on_FilterLineEdit_text_changed"]
[connection signal="item_activated" from="left/tab/Players" to="." method="_on_Players_item_activated"]
[connection signal="item_rmb_selected" from="left/tab/Players" to="left/tab/Players" method="_on_Players_item_rmb_selected"]
[connection signal="player_joined" from="left/tab/Players" to="." method="_on_Players_player_joined"]
[connection signal="player_left" from="left/tab/Players" to="." method="_on_Players_player_left"]
[connection signal="player_updated" from="left/tab/Players" to="." method="_on_Players_player_updated"]
[connection signal="item_selected" from="status_view/container/LayerOptionButton" to="." method="_on_LayerOptionButton_item_selected"]
[connection signal="item_selected" from="status_view/container/DayNightOptionButton" to="status_view/container/DayNightOptionButton" method="_on_DayNightOptionButton_item_selected"]
[connection signal="value_changed" from="status_view/container/SubGroupIdSpinBox" to="." method="_on_SubGroupIdSpinBox_value_changed"]
[connection signal="pressed" from="status_view/container/SettingsButton" to="status_view/container/SettingsButton" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Right Panel/VBoxContainer/HBoxContainer/Close" to="Right Panel" method="_on_Close_pressed"]
[connection signal="showing_details_of" from="Right Panel/VBoxContainer/DetailsPanel" to="Right Panel" method="_on_DetailsPanel_showing_details_of"]
[connection signal="settings_updated" from="SettingsWindowDialog" to="." method="_on_SettingsWindowDialog_settings_updated"]
[connection signal="confirmed" from="DayNightTimeMigrationConfirmationDialog" to="DayNightTimeMigrationConfirmationDialog" method="_on_DayNightTimeMigrationConfirmationDialog_confirmed"]
